# microservice-template

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.deployment/: Dockerfile  README.md  docker-compose.yaml
app/: main.py  router.py  settings.py
app/auth/: __init__.py  auth.py  settings.py
app/cache/: __init__.py  cache.py  cache_base.py
app/cache/project/: __init__.py  project.py
app/db/: __init__.py  db.py  db_base.py
app/db/project/: __init__.py  project.py
app/db/project_user/: __init__.py  project_user.py
app/db/service_user/: __init__.py  service_user.py
app/db/user/: __init__.py  user.py
app/dependencies/: __init__.py
app/dependencies/http/: __init__.py  http.py
app/managers/: __init__.py  managers.py  managers_base.py
app/managers/auth/: __init__.py  auth.py
app/managers/projects/: __init__.py  projects.py
app/models/: __init__.py  example_enum.py  example_model.py
app/router/: __init__.py  router.py
app/router/auth/: auth.py
app/router/projects/: project.py
app/router/system/: system.py
app/services/: __init__.py  processing.py  services.py  services_base.py
app/services/example_service/: __init__.py  interface.py
app/services/metrics/: __init__.py  prometheus_collector.py
app/stream/: __init__.py
app/stream/projects/: projects.py
debezium/: config.json  load_config.sh
jdbc/: config.json  load_config.sh
migrations/: env.py
migrations/versions/: 202306140847-0dcabf316ab9_project.py  202308080942-3fc3137b62c3_add_tables.py
models/dataclass/: example_model.py
models/enum/: __init__.py  auth.py  collector_broker_type.py  collector_database_type.py  collector_object_type.py  roles.py  service.py
models/pydantic/: __init__.py  base.py  jwt.py  keycloak.py
models/pydantic/api/: __init__.py
models/pydantic/db/: __init__.py
models/pydantic/exceptions/: __init__.py  exceptions.py
models/redisorm/: __init__.py  projects.py
models/sqlalchemy/: __init__.py  base.py  project_users.py  projects.py  service_users.py  users.py
services/: __init__.py  services.py  services_base.py
services/broker/: __init__.py  broker.py  exceptions.py
services/broker/kafka/: kafka.py  settings.py
services/database/: __init__.py  database.py  exceptions.py
services/database/postgresql/: __init__.py  postgresql.py  settings.py
services/metrics/: __init__.py  prometheus_collector.py
services/s3_storage/: __init__.py  s3_storage.py
services/s3_storage/boto3/: boto3.py  settings.py
services/s3_storage/minio/: settings.py
services/storage_orm/: __init__.py
services/storage_orm/redis_orm/: settings.py
static/: README.md
tests/integration/: conftest.py
(+19 files in other folders)
